@@ -2,6 +2,8 @@
 Change Log
 -----------
 
+  - FEATURE REQUEST: Made $REQUEST_URI easily available through $page.
+
 Version v1.0:
 
   - FEATURE REQUEST: Made regular expressions match the upper-case HTML tags of old.
